bloonix-webgui (0.66) released at 2015-XX-XX

    * Increased chart alignment from 3 to 8.

bloonix-webgui (0.65) released at 2015-09-01

    * Fixed Elasticsearch template: dynamic_templates includes now
      double, float, long and integer.
    * The Elasticsearch template is now updated automatically.

bloonix-webgui (0.64) released at 2015-08-31

    * The description field of host template can now be empty.
    * Max attempts can be set to 0 to disable notifications.

bloonix-webgui (0.63) released at 2015-08-24

    * Fixed: result data are not empty any more.

bloonix-webgui (0.62) released at 2015-08-23

    * If the parameter is_demo is set to true and if the logged in user called "demo",
      then the user has no permissions to call create|update|delete|add|remove actions.
    * Fixed viewing advanced service data.

bloonix-webgui (0.61) released at 2015-08-20

    * Kicked '#' from the string list for the password generation in
      init-database.sh
    * Fixed double creation of table lock_srvchk.

bloonix-webgui (0.60) released at 2015-08-15

    * Fixed alter/rename syntax for mysql upgrade.

bloonix-webgui (0.59) released at 2015-08-14

    * Bloonix-Agent documentation updated and described how to
      configure checks to execute via sudo.

bloonix-webgui (0.58) released at 2015-08-06

    * Heavy changes in the schema of bloonix and re-designed
      the notification handling.

bloonix-webgui (0.57) released at 2015-06-23

    * Added new WTRM features: doSwitchToNewPage and doSwitchToMainPage.

bloonix-webgui (0.56) released at 2015-06-22

    * Added new WTRM features: doTriggerEvent, doSwitchToFrame,
      doSwitchToParentFrame, doDumpContent and doDumpFrameContent.

bloonix-webgui (0.55) released at 2015-06-20

    * Fixed service chart creation on the dashboard.

bloonix-webgui (0.54) released at 2015-06-20

    * Improved random string generation in sha256 and sha512.

bloonix-webgui (0.53) released at 2015-06-20
