@@ -1,6 +1,7 @@
 bloonix-webgui (0.66) released at 2015-XX-XX
 
     * Increased chart alignment from 3 to 8.
+    * Added route /administration/hosts/$id.
 
 bloonix-webgui (0.65) released at 2015-09-01
 
